# PythonORMPractice

./: .env.example  .gitignore  PARITY_MATRIX.md  QUICKSTART.md  README.md  SETUP_AND_RUN.md  STUDY_PLAN.md  TODO.md  docker-compose.yml  pyproject.toml
checkpoints/: run_commands.md  status.md
common/: db_urls.md
django-orm-phases/: RUN_PHASES.md  TODO.md
django-orm-phases/phase-01-models-and-admin/docs/: FEATURES.md
django-orm-phases/phase-01-models-and-admin/labs/: README.md
django-orm-phases/phase-01-models-and-admin/sample_code/: models_crud_sample.py
django-orm-phases/phase-02-querysets-and-relations/docs/: FEATURES.md
django-orm-phases/phase-02-querysets-and-relations/labs/: README.md
django-orm-phases/phase-02-querysets-and-relations/sample_code/: relations_sample.py
django-orm-phases/phase-03-annotations-aggregations-and-optimization/docs/: FEATURES.md
django-orm-phases/phase-03-annotations-aggregations-and-optimization/labs/: README.md
django-orm-phases/phase-03-annotations-aggregations-and-optimization/sample_code/: analytics_sample.py
django-orm-phases/phase-04-migrations-signals-and-mini-project/docs/: FEATURES.md
django-orm-phases/phase-04-migrations-signals-and-mini-project/labs/: README.md
django-orm-phases/phase-04-migrations-signals-and-mini-project/sample_code/: mini_project_sample.py
django-orm-phases/project/: manage.py
django-orm-phases/project/orm_lab/: admin.py  apps.py  models.py  signals.py  (+1 more)
infra/init/: 01-create-databases.sql
sqlalchemy-phases/: RUN_PHASES.md  TODO.md
sqlmodel-phases/: RUN_PHASES.md  TODO.md
(+39 files in other folders)
