[project]
name = "python-orm-practice"
version = "0.1.0"
description = "Hands-on practice for SQLAlchemy, Django ORM, and SQLModel with PostgreSQL"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
sqlalchemy_track = [
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
  "python-dotenv>=1.0"
]
django_track = [
  "django>=5.1",
  "psycopg[binary]>=3.2",
  "dj-database-url>=2.2",
  "python-dotenv>=1.0"
]
sqlmodel_track = [
  "sqlmodel>=0.0.22",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
  "fastapi>=0.115",
  "python-dotenv>=1.0"
]
all = [
  "sqlalchemy>=2.0",
  "sqlmodel>=0.0.22",
  "django>=5.1",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
  "dj-database-url>=2.2",
  "fastapi>=0.115",
  "python-dotenv>=1.0"
]

[tool.uv]
default-groups = []
